# cookiecutter-python-project

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.directory_name }}/: README.md  pyproject.toml
{{ cookiecutter.directory_name }}/.github/workflows/: code-quality.yml  release.yml  test-suite.yml
